# ConversationGuard

./: .gitignore  CODEFILE.txt  README.md  StructureLatest.md  guard.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/ai/guard/: ExampleInstrumentedTest.kt
app/src/androidTest/java/ai/guard2/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  whisper_jni.cpp
app/src/main/java/ai/guard/: AppState.kt  MainActivity.kt
app/src/main/java/ai/guard/logic/: LightDecider.kt  ToxicityHeuristics.kt
app/src/main/java/ai/guard/native/: WhisperBridge.kt
app/src/main/java/ai/guard/ui/: ConversationGuardScreen.kt
app/src/main/java/ai/guard/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/ai/guard2/: AppState.kt  MainActivity.kt
app/src/main/java/ai/guard2/logic/: LightDecider.kt  ToxicityHeuristics.kt
app/src/main/java/ai/guard2/native/: WhisperBridge.kt  WhisperUtil.kt
app/src/main/java/ai/guard2/ui/: ConversationGuardScreen.kt
app/src/main/java/ai/guard2/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/ai/guard/: ExampleUnitTest.kt
app/src/test/java/ai/guard2/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
